--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+    <link rel="shortcut icon" href="227_Netflix_logo-512.jpg" type="image/x-icon">
 </head>
 
 <body>
